--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ jobs:
       install: skip
       script: ./gradlew clean build
       before_deploy:
-        - git config --local user.name "Travis CI"
-        - git config --local user.email "travis@example.com"
+        - git config --local user.name "Tomohiro Mashiyama"
+        - git config --local user.email "tmashi_1979@docomo.ne.jp"
         - git tag -f $RELEASE_TAG
       deploy:
         provider: releases
